# SistemaSolar

./: ApresentaçãoCG.pptx
SistemaSolar/: CMakeLists.txt  camera.h  ft2build.h  glad.c  glad.h  khrplatform.h  main.cpp  maths_funcs.h  mesh.h  model.h  run  shader_m.h  stb_image.h
SistemaSolar/shaders/: lighting_maps.frag  lighting_maps.glsl  skybox.frag  skybox.glsl  textshader.fs  textshader.vs
